k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiro-tts-deployment
  labels:
    app: tiro-tts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tiro-tts
  template:
    metadata:
      labels:
        app: tiro-tts
    spec:
      volumes:
      - name: models
        emptyDir: {}
      containers:
      - name: tiro-tts
        image: tiro-tts
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          protocol: TCP
        volumeMounts:
        - name: models
          mountPath: /models
          readOnly: true
        resources:
          requests:
            memory: "800Mi"
            cpu: "100m"
