k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiro-tts-svc
spec:
  selector:
    app: tiro-tts
  ports:
  - name: http
    port: 80
    targetPort: 8000
